Fix issues in main page, fix minor issue in BART page
First issue: make the light/dark mode button invisible when responsive. Second, add a dot to the placeholder text.

--- a/Transcyclopedia/css_assets/responsive_function.css
+++ b/Transcyclopedia/css_assets/responsive_function.css
@@ -51,7 +51,7 @@
 }
 
 @media (max-width: 600px) {
-    .toggle_light_dark {
+    #light_or_dark {
         display: none;
     }
 
